# twobodyproblem-gui

./: .gitignore  CODE_OF_CONDUCT.md  README.md  requirements.txt  setup.cfg
twobodyproblem_gui/: __main__.py  entry.py  examples.py  settings.py
