[metadata]
name = twobodyproblem_gui
version = attr: twobodyproblem_gui.__version__
author = Florian Frauenfelder
author_email = florian.l.frauenfelder@gmail.com
description = a graphical user interface for the package twobodyproblem
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Two-Body-Problem/twobodyproblem-simulation-python-gui
keywords = pyside
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: German
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
python_requires = >=3.8
packages = find:
install_requires =
    pyside6
    pyyaml >= 5.4.1
    twobodyproblem >= 1.3.0

[options.package_data]
twobodyproblem_gui =
    ui/*.ui
    ui/icon.gif